[package]
name = "hspice-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line tool for HSPICE / SPICE3 waveform files"

[[bin]]
name = "hspice-cli"
path = "src/main.rs"

[dependencies]
hspice-core.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
num-complex.workspace = true
memmap2.workspace = true
